--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,7 @@ body {
 .toggle-all {
   width: 60px;
   height: 34px;
+  color: blue;
 }
 
 .todo-list {
@@ -302,16 +303,6 @@ html .clear-completed:active {
 	Hack to remove background from Mobile Safari.
 	Can't use it globally since it destroys checkboxes in Firefox
 */
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
-  .toggle-all,
-  .todo-list li .toggle {
-    background: none;
-  }
-
-  .todo-list li .toggle {
-    height: 40px;
-  }
-}
 
 @media (max-width: 430px) {
   .footer {
@@ -359,4 +350,34 @@ html .clear-completed:active {
   font-weight: bolder;
   padding-left: 1rem;
   opacity: 1;
+}
+input[type="checkbox"] {
+  -webkit-appearance: none;
+  appearance: none;
+}
+input[type="checkbox"] {
+  margin-left: 1rem;
+  position: relative;
+  width: 34px;
+  height: 34px;
+  border: 1px solid darkgray;
+  border-radius: 50%;
+  /* Adjusts the position of the checkboxes on the text baseline */
+  vertical-align: -2px;
+  /* Set here so that Windows' High-Contrast Mode can override */
+  color: #5dc2af;
+}
+
+input[type="checkbox"]::before {
+  content: "✔";
+  position: absolute;
+  font-size: 1.7em;
+  right: 0.3rem;
+  top: 0.1em;
+  visibility: hidden;
+}
+
+input[type="checkbox"]:checked::before {
+  /* Use `visibility` instead of `display` to avoid recalculating layout */
+  visibility: visible;
 }
